Fix paint invalidation rect of LayoutView

The bug was caused by http://crrev.com/1929413002 which uses
selfVisualOverflowRect() instead of visualOverflowRect() to calculate
paint invalidation rect. It caused wrong paint invalidation rect
for LayoutView.

Before rootLayerScrolls is launched, LayoutView's overflow model is
special. We should calculate its paint invalidation rect based on its
special visualOverflowRect() for now.

BUG=611046

Review-Url: https://codereview.chromium.org/1971843002
Cr-Commit-Position: refs/heads/master@{#393099}

Former-commit-id: c053f70ee05c2dd91bf8b9da324e2a631e356bdc